delete article feature
