# resource-server/src/main/resources/api.yaml
@@ -79,6 +79,23 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Article"
+    delete:
+      tags:
+        - "article"
+      operationId: "deleteArticle"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "path"
+          name: "articleId"
+          description: "ID of the Article to delete"
+          required: true
+          type: string
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Article"
 securityDefinitions:
   article_auth:
     type: "oauth2"
